--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta tag for search engine-->
+    <meta name="description" content="Love running. Club runners in Dublin ,Ireland, Urban Running, trail running,Dublin docklands and Phoenix Park>
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise.">  
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
