--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 </head>
 
 <body>
+   
+    <!--Header-->
+    <header>Header</header>
+
+    <!--Main-->
+    <main>Main Content</main>
+
+    <!--Footer-->
+    <footer>Footer</footer>
 
 </body>
 
