--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
     <main>Main Content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li> <a href="http://www.facebook.com/" target="_blank" rel="noopener" 
+                aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
 
+    <!--font awesome kit-->
+    <script src="https://kit.fontawesome.com/acd11ec600.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
