--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">x</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav> 
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -44,6 +44,12 @@
         <ul>
             <li> <a href="http://www.facebook.com/" target="_blank" rel="noopener" 
                 aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li> <a href="http://www.instagram.com/" target="_blank" rel="noopener" 
+                aria-label="visit our instagram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            <li> <a href="http://www.twitter.com/" target="_blank" rel="noopener" 
+                aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+            <li> <a href="http://www.youtube.com/" target="_blank" rel="noopener" 
+                aria-label="visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
     </footer>
 
