--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,9 @@
     </header>
 
     <!--Main-->
-    <main>Main Content</main>
+    <main>
+        
+    </main>
 
     <!--Footer-->
     <footer>
