--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </section>
         <section id="reasons"> 
-            <h2>Love Running With Us?</h2>
+            <h2>Why Love Running With Us?</h2>
             <div id="benefits">
                 <div id="benefits-physical">
                     <div>
