--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--meta tag for search engine-->
     <meta name="description" content="Love running. Club runners in Dublin ,Ireland, Urban Running, trail running,Dublin docklands and Phoenix Park>
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise.">  
+    <meta name="keywords" 
+    content="love running, run, running club, runners, Ireland, Dublin, sport, exercise.">  
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
@@ -30,8 +31,8 @@
         <nav> 
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Sign Up</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
